--- a/runnerdeployment.yaml
+++ b/runnerdeployment.yaml
@@ -3,6 +3,7 @@ apiVersion: actions.summerwind.dev/v1alpha1
 kind: RunnerDeployment
 metadata:
   name: stable-diffusion-runnerdeploy
+  namespace: github-actions
 spec:
   replicas: 1
   template:
